--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,12 @@ services:
     ports: 
       - "5000:5000"
     restart: always
-    environment:
-      - MYSQL_SECRET_USER=yona
-      - MYSQL_SECRET_PASS=1234
-      - MYSQL_HOST=mysql
-      - MYSQL_DATABASE=attendance
+    env_file:
+      - environmentals/.env
     depends_on:
       - mysql
   
   mysql:
     image: 'mysql:latest'
-    environment:
-      - MYSQL_USER=yona
-      - MYSQL_ROOT_PASSWORD=1234
-      - MYSQL_PASSWORD=1234
-      - MYSQL_DATABASE=attendance
+    env_file:
+      - environmentals/.env
