--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 RUN apk add --update --no-cache openssh
 RUN mkdir /usr/src/app/.ssh
-COPY .ssh/id_rsa /usr/src/app/.ssh/id_rsa
+COPY ~/.ssh/id_rsa /usr/src/app/.ssh/id_rsa
 RUN mkdir /usr/src/app/csv_files
 
 COPY attendance.py .
