--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
 version: '3'
 services:
   backend:
-    image: 'amitlubin/attendance-backend:latest'
+    image: 'natibloy/attendance-project:latest'
     ports: 
       - "5000:5000"
     restart: always
-    env_file:
-      - environmentals/.env
+    environment:
+      - DOTENV
+#    env_file:
+#      - environmentals/.env
     depends_on:
       - mysql
   
   mysql:
     image: 'mysql:latest'
-    env_file:
-      - environmentals/.env
+    environment:
+      - DOTENV
+#    env_file:
+#      - environmentals/.env
