--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,16 @@ services:
     ports: 
       - "5000:5000"
     restart: always
-#    environment:
-#      - DOTENV
-    env_file:
-      - ${env}
+    environment:
+      - DOTENV
+#    env_file:
+#      - environmentals/.env
     depends_on:
       - mysql
   
   mysql:
     image: 'mysql:latest'
-#    environment:
-#      - DOTENV
-    env_file:
-      - ${env}
+    environment:
+      - DOTENV
+#    env_file:
+#      - environmentals/.env
