--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,10 +10,12 @@ RUN npm run build --prod
 
 
 
-FROM nginx:latest
+FROM nginx:1.23.2-alpine
 
 WORKDIR /usr/share/nginx/html
 
 RUN rm -rf ./*
 COPY --from=builder /app/build .
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+EXPOSE 3000
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
