--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,6 @@ services:
       - backend
     ports:
       - "3000:3000"
+    environment:
+      - "REACT_APP_PUBLIC_IP='http://localhost:5000/'"
+    
