--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,9 +6,8 @@ COPY package.json .
 COPY package-lock.json .
 RUN npm ci
 
-ARG REACT_APP_PUBLIC_IP
-ENV REACT_APP_PUBLIC_IP $REACT_APP_PUBLIC_IP
-
+ARG REACT_APP_PUBLIC_IP="http://localhost:5000/"
+ENV REACT_APP_PUBLIC_IP ${REACT_APP_PUBLIC_IP}
 COPY . .
 RUN npm run build --prod
 
