--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ COPY package.json .
 COPY package-lock.json .
 RUN npm ci
 
-ARG REACT_APP_PUBLIC_IP="http://localhost:5000/"
+ARG REACT_APP_PUBLIC_IP="/api/"
 ENV REACT_APP_PUBLIC_IP ${REACT_APP_PUBLIC_IP}
 COPY . .
 RUN npm run build --prod
