Added env to client in odcker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     image: 'amitlubin/attendance-frontend:latest'
     depends_on:
       - backend
+    env_file:
+      - environmentals/.env
     #ports:
     #  - "3000:3000"
 
